--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="assets/css/docs.css" rel="stylesheet">
     <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet"> 
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -51,27 +53,35 @@
           </button>
           <a class="brand" href="./index.html">JBITC</a>
           <div class="nav-collapse collapse">
-            <ul class="nav">
+	         <ul class="nav">
               <li class="">
-                <a href="./index.html">Home</a>
+                <a href="./index.html"><i class="icon-home"> </i>&nbsp; Home</a>
               </li>
-              <li class="">
-                <a href="./lcc.html">Lomba Cerdas Cermat</a>
-              </li>
-              <li class="">
-                <a href="./lblog.html">Lomba Blog</a>
-              </li>
-              <li class="">
-                <a href="./lpemrograman.html">Lomba Pemrograman</a>
-              </li>
-              <li class="">
-                <a href="./lweb.html">Lomba Web</a>
+              <li class="dropdown">
+              	<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <i class="icon-exclamation">&nbsp; Competition</i>
+                    <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li class="">
+                    <a href="./lcc.html"><i class="icon-book"> </i>&nbsp; Lomba Cerdas Cermat</a>
+                  </li>
+                  <li class="">
+                    <a href="./lblog.html"><i class="icon-group"> </i>&nbsp; Lomba Blog</a>
+                  </li>
+                  <li class="">
+                    <a href="./lpemrograman.html"><i class="icon-code-fork"> </i>&nbsp; Lomba Pemrograman</a>
+                  </li>
+                  <li class="">
+                    <a href="./lweb.html"><i class="icon-code"> </i>&nbsp; Lomba Web</a>
+                  </li>
+                </ul>
               </li>
               <li class="active">
-                <a href="./about.html">Tentang</a>
+                <a href="./about.html"><i class="icon-user"> </i>&nbsp; Tentang</a>
               </li>
               <li class="">
-                <a href="./contact.html">Hubungi Kami</a>
+                <a href="./contact.html"><i class="icon-phone"> </i>&nbsp; Hubungi Kami</a>
               </li>
             </ul>
           </div>
@@ -87,7 +97,15 @@
 	<footer class="footer">
     	<div class="container">
 	    	<p class="text-center"> <button class="btn btn-primary" type="button">Sponsored by :</button></p>
-    	  <p class="text-center">&nbsp;</p>
+    	  <p class="text-center">
+	            
+                <br>
+                <img src="assets/img/UM 2.png" width="70"> &nbsp;
+                <img src="assets/img/UM.png" width="70"> &nbsp;
+                <img src="assets/img/hme.png" width="70"> &nbsp;
+                <img src="assets/img/logo140.png" width="70"> &nbsp;
+                <br><br>
+            </p>
             <div class="progress progress-striped active">
 			  <div class="bar" style="width: 100%;"></div>
 		  </div>
